Add service for releasing an amending law
RISDEV-3451 / RISDEV-3623